--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "strictNullChecks": true,
-    "module": "commonjs",
+    "module": "amd",
     "removeComments": true,
     "preserveConstEnums": true,
     "outFile": ".lib/index.js",
