--- a/package.json
+++ b/package.json
@@ -5,13 +5,13 @@
   "main": "lib/index",
   "types": "lib/index",
   "scripts": {
-    "start": "tsc && node lib/index.js",
-    "dev": "nodemon",
+    "start": "nodemon --watch '**/*.ts' --exec ts-node src/index.ts",
+    "build": "ts-node src/index.ts",
     "precommit": "npm test && npm run lint",
     "lint": "eslint ./ -f visualstudio",
-    "test": "tsc && ava",
-    "test:cover": "tsc && nyc ava",
-    "test:watch": "tsc && ava --watch"
+    "test": "ts-node src/index.ts && ava",
+    "test:cover": "ts-node src/index.ts && nyc ava",
+    "test:watch": "ts-node src/index.ts && ava --watch"
   },
   "author": "",
   "license": "ISC",
@@ -30,6 +30,7 @@
     "nodemon": "^1.17.5",
     "nyc": "^12.0.2",
     "sinon": "^5.1.0",
+    "ts-node": "^6.1.0",
     "tslint": "^5.10.0",
     "typescript": "^2.9.1"
   },
@@ -57,9 +58,9 @@
     "env": {
       "NODE_ENV": "development"
     },
-    "ext": "js",
+    "ext": "ts",
     "watch": [
-      "app/"
+      "src/"
     ]
   }
 }
