--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,10 @@
   "compilerOptions": {
     "declaration": true,
     "esModuleInterop": true,
+    "experimentalDecorators": true,
+    "lib": [
+      "es6"
+    ],
     "module": "commonjs",
     "moduleResolution": "node",
     "outDir": "lib",
@@ -13,10 +17,6 @@
     "target": "esnext"
   },
   "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "**/*.spec.ts"
+    "src/**/*.ts"
   ]
 }
