state stuff in EntityMap. Colyseus sais "don't use Map or Set". Each game can has its own GameState, trygin to stitch it together.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "scripts": {
     "start": "ts-node examples/warGame/index.ts",
+    "dev": "nodemon -x ts-node examples/warGame/index.ts",
     "precommit": "npm run lint",
     "lint": "eslint ./ -f visualstudio",
     "test": "ts-node src/index.ts && ava",
