--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "url": "git://github.com/Zielak/cardsGame-server.git"
   },
   "scripts": {
-    "start": "ts-node examples/warGame/warGame.ts",
+    "start": "ts-node examples/warGame/index.ts",
     "dev": "nodemon -x ts-node examples/warGame/index.ts",
     "precommit": "npm run lint",
     "lint": "eslint ./ -f visualstudio",
