started working on the simplest example. progress & cleanup

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "node",
       "request": "launch",
       "args": [
-        "${workspaceFolder}/src/index.ts"
+        "${workspaceFolder}/examples/simpleTest/index.ts"
       ],
       "runtimeArgs": [
         "-r",
