--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
       "type": "node",
       "request": "launch",
       "args": [
-        "${workspaceFolder}/examples/containersTest/index.ts"
+        "${workspaceFolder}/examples/makao/index.ts"
       ],
       "runtimeArgs": [
         "-r",
